<resources>
    <string name="app_name">LEANLIFE</string>
    <string name="action_settings">Settings</string>
    <string name="server_client_id">782607624418-8qhtlb18o48scqu4votg988m9fo1k6pc.apps.googleusercontent.com</string>
    <string name="faceid">203933656705563</string>
    <string name="crop_image_menu_crop">Cortar</string>
    <string name="tut1_1">SEU PARCEIRO</string>
    <string name="tut1_2">DE ACADEMIA</string>
    <string name="tut1_3">LEANLIFE gera rotinas de treino personalizados divididos em LeanCycles que progridem com seu treinamento e uso</string>
    <string name="tut1_4">Deslize para a esquerda para continuar</string>
    <string name="tut2_1">UM NOVO TREINO</string>
    <string name="tut2_2">TODOS OS DIAS</string>
    <string name="tut2_3">Cada LeanCycle é gerado de forma única, sendo as sessões de treinos sempre diferentes.\nÉ muita variaçao para manter o seu progresso constante!</string>
    <string name="tut2_4">Deslize para a esquerda para continuar</string>
    <string name="tut3_1">APROVADO</string>
    <string name="tut3_2">PELA CIÊNCIA</string>
    <string name="tut3_3">LeanCycle segue o conceito da periodização, um estimulo de treinamento progressivo que ajuda no ganho de força, músculos e na perda de gordura.</string>
    <string name="tut3_4">Deslize para a esquerda para continuar</string>
    <string name="tut4_1">Sempre em forma.</string>
    <string name="tut4_2">Cadastre-se com Facebook</string>
    <string name="tut4_3">Cadastre-se com Google</string>
    <string name="tut4_4">Cadastre-se ou Login com email</string>
    <string name="tut4_5">Clique aqui</string>
    <string name="tut4_pos1">Erro ao verificar conta</string>
    <string name="tut4_pos2">Verifique sua conexão com a Internet...</string>
    <string name="tut4_pos3">Aguarde</string>
    <string name="tut4_pos4">Verificando conta...</string>
    <string name="login_1">Login com Facebook</string>
    <string name="login_2">Login com Google</string>
    <string name="login_3">OU</string>
    <string name="login_4">Email</string>
    <string name="login_5">Senha</string>
    <string name="login_6">Esqueceu sua senha?</string>
    <string name="login_7">Login</string>
    <string name="login_8">Não tem uma conta? CADASTRO</string>
    <string name="login_pos1">Erro ao entrar na conta</string>
    <string name="login_pos2">Verifique se seus dados estão corretos...</string>
    <string name="cadastro_0">Cadastro</string>
    <string name="cadastro_1">Cadastre-se com Facebook</string>
    <string name="cadastro_2">Cadastre-se com Google</string>
    <string name="cadastro_3">OU</string>
    <string name="cadastro_4">Nome</string>
    <string name="cadastro_5">Email</string>
    <string name="cadastro_6">Senha</string>
    <string name="cadastro_7">Cadastro</string>
    <string name="cadastro_8">Termos e Condições</string>
    <string name="cadastro_9">e</string>
    <string name="cadastro_10">Política de Privacidade</string>
    <string name="cadastro_11">Tem uma conta? CLIQUE AQUI</string>
    <string name="cadastro_pos1">Criando conta...</string>
    <string name="cadastro_pos2">Dados faltantes</string>
    <string name="cadastro_pos3">Preencha o campo de nome...</string>
    <string name="cadastro_pos4">Preencha o campo de email...</string>
    <string name="cadastro_pos5">Preencha o campo de senha...</string>
    <string name="cadastro_pos6">Erro ao criar conta</string>
    <string name="cadastro_pos7">Tente novamente com outro email...</string>
    <string name="esqueci_0">Esqueci Senha</string>
    <string name="esqueci_1">Email</string>
    <string name="esqueci_2">Enviar link para redefinir senha</string>
    <string name="esqueci_3">Voltar para o login</string>
    <string name="esqueci_pos1">Aguarde</string>
    <string name="esqueci_pos2">Enviando dados...</string>
    <string name="esqueci_pos3">Sucesso ao pedir senha</string>
    <string name="esqueci_pos4">Verifique seu email e siga os passos para trocar sua senha...</string>
    <string name="esqueci_pos5">Erro ao pedir troca de senha</string>
    <string name="esqueci_pos6">Verifique se seu email está correto...</string>
    <string name="step1_1">Olá Usuário,\nVamos começar?</string>
    <string name="step1_2">Um LeanCycle tem quatro estágios de treinamento.\n Cada estágio tem quatro sessões.\n Cada LeanCycle é mais difícil do que o anterior.</string>
    <string name="step1_3">Inicie o seu primeiro LeanCycle</string>
    <string name="step1_4">Você pode atualizar suas preferências mais tarde, sempre que desejar.</string>
    <string name="step2_1">PASSO 1/5</string>
    <string name="step2_2">OBJETIVO PRINCIPAL</string>
    <string name="step2_3">Até 2 opções</string>
    <string name="step2_4">Perder gordura</string>
    <string name="step2_5">Aumento de massa muscular</string>
    <string name="step2_6">Rendimento Esportivo</string>
    <string name="step2_7">Ganho de força muscular</string>
    <string name="step2_8">Bem-Estar Geral</string>
    <string name="step2_pos1">Erro ao selecionar</string>
    <string name="step2_pos2">Você só pode selecionar até 2 opções</string>
    <string name="step2_pos3">Erro ao continuar</string>
    <string name="step2_pos4">Você precisa selecionar pelo menos 1 opção</string>
    <string name="step3_1">PASSO 2/5</string>
    <string name="step3_2">NÍVEL DE ATIVIDADE</string>
    <string name="step3_3">Sedentário</string>
    <string name="step3_4">Não treinou há anos</string>
    <string name="step3_5">Ativo</string>
    <string name="step3_6">Exercício leve a intenso 2 - 3 vezes por semana</string>
    <string name="step3_7">Muito ativo</string>
    <string name="step3_8">Exercício leve a intenso 4 - 5 vezes por semana</string>
    <string name="step3_9">Atleta</string>
    <string name="step3_10">Exercício intenso 6 ou mais vezes por semana</string>
    <string name="step3_pos1">Erro ao continuar</string>
    <string name="step3_pos2">Você só pode selecionar uma opção</string>
    <string name="step4_1">PASSO 3/5</string>
    <string name="step4_2">STATUS BÁSICO</string>
    <string name="step4_3">Nós usamos parar gerar sua rotina de exercícios.</string>
    <string name="step4_4">Gênero</string>
    <string name="step4_5">Data de nascimento</string>
    <string name="step4_6">Unidade de medida</string>
    <string name="step4_7">Altura</string>
    <string name="step4_8">Peso</string>
    <string name="step4_pos1">Selecione a data</string>
    <string name="step4_pos2">Masculino</string>
    <string name="step4_pos3">Feminino</string>
    <string name="step4_pos4">Erro ao continuar</string>
    <string name="step4_pos5">Escolha um Gênero</string>
    <string name="step4_pos6">Escolha uma data de aniversário</string>
    <string name="step4_pos7">Escolha uma unidade de medida</string>
    <string name="step4_pos8">Preencha sua altura</string>
    <string name="step4_pos9">Preencha seu peso</string>
    <string name="step5_1">PASSO 4/5</string>
    <string name="step5_2">META FITNESS</string>
    <string name="step5_3">Não se preocupe, você pode mudar isso mais tarde.</string>
    <string name="step5_4">Duração da Sessão (min)</string>
    <string name="step5_5">Grupo muscular para enfatizar</string>
    <string name="step5_pos1">Erro ao continuar</string>
    <string name="step5_pos2">Selecione a duração da sessão</string>
    <string name="step5_pos3">Selecione áreas de enfatização</string>
    <string name="step5_pos4">Escolha ></string>
    <string name="step4b_1">PASSO 4/5</string>
    <string name="step4b_2">ENFATIZAR</string>
    <string name="step4b_3">Você deve escolher 3 grupos musculares.</string>
    <string name="step4b_4">Salvar</string>
    <string name="step4b_5">Erro ao selecionar</string>
    <string name="step4b_6">Marque 3 opções</string>
    <string name="step4b_7">Marque no mínimo 1 opção e no máximo 3 opções</string>
    <string name="area_1">Peitorais</string>
    <string name="area_2">Ombros</string>
    <string name="area_3">Costas</string>
    <string name="area_4">Pernas</string>
    <string name="area_5">Gluteus</string>
    <string name="area_6">Abdominal</string>
    <string name="area_7">Braço</string>
    <string name="area_8">Panturrilha</string>
    <string name="area_9">Enfatizar</string>
    <string name="area_10">Excluir</string>
    <string name="step6_1">ÚLTIMO PASSO</string>
    <string name="step6_2">SUA SEGURANÇA</string>
    <string name="step6_3">Eu afirmo,</string>
    <string name="step6_4">Que estou em boa condição física e não sofro de qualquer condição conhecida que me impediria de seguir este programa de exercícios.</string>
    <string name="step6_5">Reconheço que o uso deste programa é voluntário e não é de forma alguma exigido pela LEANLIFE LLC.\nEm consideração da minha participação neste programa, eu libero o LEANLIFE LLC de quaisquer reivindicações como resultado da minha participação voluntária e inscrição dos exercícios fornecidos.</string>
    <string name="step6_6">Clicando em reconhecer que você concorda com nossos Termos de Uso e Política de Privacidade</string>
    <string name="step6_7">EU RECONHEÇO</string>
    <string name="step6_pos1">Erro ao enviar dados</string>
    <string name="step6_pos2">Tente novamente e verifique a sua ligação à Internet.</string>
    <string name="step6_pos3">Dados atualizados com sucesso!</string>
    <string name="step6_pos4">Vá para a parte de Treinos para ver o novo treino que geramos para você!</string>
    <string name="abas_1">Treino</string>
    <string name="abas_4">Desafios</string>
    <string name="abas_2">Config</string>
    <string name="abas_3">Eu</string>
    <string name="tab1_1">Vamos começar com o seu primeiro LeanCycle!</string>
    <string name="tab1_2">Perfeitamente customizado para você e seus objetivos!</string>
    <string name="tab1_3">Pronto para continuar o treinamento?\nPermite desbloquear o próximo ciclo!</string>
    <string name="tab1_4">Pronto para continuar o treinamento?\nVamos desbloquear o próximo conjunto de exercícios!</string>
    <string name="tab1_5">NOVO CICLO</string>
    <string name="tab1_6">DESBLOQUEAR</string>
    <string name="tab1_7">Desbloquear mais treinos</string>
    <string name="tab1_8">Chamar 3 amigos</string>
    <string name="tab1_9">Escolha um plano</string>
    <string name="tab1_10">Cancelar</string>
    <string name="tab1_11">Desbloquear novo ciclo</string>
    <string name="tab1_12">Gerar novo ciclo</string>
    <string name="tab1_13">Configurar ajustes</string>
    <string name="tab1_14">Cancelar</string>
    <string name="tab1_pos0">Ajuda</string>
    <string name="tab2_1">Informações Pessoais</string>
    <string name="tab2_2">Gênero</string>
    <string name="tab2_3">Data de nascimento</string>
    <string name="tab2_4">Unidade de medida</string>
    <string name="tab2_5">Altura</string>
    <string name="tab2_6">Peso</string>
    <string name="tab2_7">Configurações de treino</string>
    <string name="tab2_8">Objetivo principal</string>
    <string name="tab2_9">Nível de Atividade</string>
    <string name="tab2_10">Duração da Sessão (min)</string>
    <string name="tab2_11">Enfatizar grupo muscular</string>
    <string name="tab2_12">Excluir grupo muscular</string>
    <string name="tab2_13">Você precisa salvar as alterações. Retorne às configurações e salve as alterações.</string>
    <string name="tab3_1">Nome e Email</string>
    <string name="tab3_2">Clique aqui</string>
    <string name="tab3_3">Foto de perfil</string>
    <string name="tab3_4">Cronômetro</string>
    <string name="tab3_5">Enter</string>
    <string name="tab3_6">Idioma</string>
    <string name="tab3_7">Enter</string>
    <string name="tab3_free">Período gratuito</string>
    <string name="tab3_free1">Até</string>
    <string name="tab3_free2">Expirado</string>
    <string name="tab3_8">Planos</string>
    <string name="tab3_9">Enter</string>
    <string name="tab3_10">Chame amigos</string>
</resources>