<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="top|center">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/volta1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:src="@drawable/chev_left"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:text="@string/step6_1"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#002266"
                android:textSize="22dp"
                android:text="@string/step6_2"/>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#b0b0b0"></RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/step6_3"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="#000"
                    android:text="@string/step6_4"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="#999"
                    android:text="@string/step6_5"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/step6_6"/>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView android:id="@+id/link1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/cadastro_8"
                        android:gravity="center"
                        android:textColor="#0000FF"
                        android:textSize="16dip"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/cadastro_9"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="16dip"/>

                    <TextView android:id="@+id/link2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/cadastro_10"
                        android:gravity="center"
                        android:textColor="#0000FF"
                        android:textSize="16dip"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/frente1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="#002266"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:textSize="16dp"
                        android:text="@string/step6_7"/>
                </RelativeLayout>

            </LinearLayout>





        </LinearLayout>
    </ScrollView>

</LinearLayout>
