<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="top|center">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/full_3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/divisao1"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="32dp"
        android:text="@string/tut2_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFA500"
        android:textStyle="bold"
        android:textSize="32dp"
        android:text="@string/tut2_2"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888"
        android:gravity="center"
        android:textSize="14dp"
        android:padding="10dp"
        android:text="@string/tut2_3"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="16dp"
        android:padding="10dp"
        android:text="@string/tut2_4"/>
</LinearLayout>
