<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ff3232"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_marginTop="30dp"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:src="@drawable/full_2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/divisao1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatButton
                        android:layout_marginTop="10dp"
                        android:id="@+id/btn_enter1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:padding="12dp"
                        android:background="@drawable/button_colorface"
                        android:textColor="#FFFFFF"
                        android:drawableLeft="@drawable/facebook_icon"
                        android:text="@string/login_1"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_enter2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:padding="12dp"
                        android:background="@drawable/button_colorgoogle"
                        android:textColor="#FFFFFF"
                        android:drawableLeft="@drawable/google_plus_icon"
                        android:text="@string/login_2"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:text="@string/login_3"/>

                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/login_4" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:layout_marginBottom="4dp">
                    <EditText android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/login_5"/>
                </android.support.design.widget.TextInputLayout>

                <TextView android:id="@+id/link_remember"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/login_6"
                    android:gravity="left"
                    android:textColor="#777777"
                    android:textSize="14dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_color"
                    android:textColor="#F0F0F0"
                    android:padding="12dp"
                    android:text="@string/login_7"/>

                <TextView android:id="@+id/link_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/login_8"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAlignment="gravity"
                    android:textColor="#333333"
                    android:textSize="16dip"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>